# Tyr-lifted-pdb

./: AGENTS.md  CMakeLists.txt  Config.cmake.in  MANIFEST.in  README.md  reproduce_assert_fail.sh  rule.txt  setup.py
dependencies/: CMakeLists.txt
dependencies/teddy/: CMakeLists.txt
docs/: PROFILING.md
exe/: CMakeLists.txt  astar.cpp  astar_eager.cpp  gbfs_lazy.cpp  ground_pddl.cpp  ground_task.cpp  lifted_task.cpp
experiments/: 2025-11-10-combiner-pair.py  2025-11-10-combiner.py  2025-11-10-ground_task-1.py  2025-11-10-ground_task-2.py  2025-11-10-ground_task-4.py  2025-11-10-ground_task-8.py  2025-11-10-ground_task.py  2026-1-8-combiner-pair.py  2026-1-8-combiner-profiling-classical.py  2026-1-8-combiner-profiling.py  2026-1-8-combiner-tyr-pl.py  2026-1-8-combiner.py  suite.py  (+17 more)
profiling/: CMakeLists.txt  README.md  attribute_parser.py  compare.py  json_loader.cpp  json_loader.hpp  projection_generator.cpp  projection_generator.json  runner.py  schema.py
profiling/planning/: CMakeLists.txt
profiling/planning/lifted_task/: CMakeLists.txt  successor_generator.cpp  successor_generator.json
profiling/planning/lifted_task/abstractions/: CMakeLists.txt  projection_generator.cpp  projection_generator.json
python/src/pytyr/: CMakeLists.txt  init_declarations.hpp  main.cpp
python/src/pytyr/common/: bindings.hpp
python/src/pytyr/formalism/planning/: __init__.py  bindings.cpp  bindings.hpp  datas.cpp  datas.hpp  domains.cpp  indices.cpp  indices.hpp  invariants.cpp  mutable.cpp  views.cpp  views.hpp
python/src/pytyr/planning/: __init__.py  bindings.cpp  bindings.hpp
python/src/pytyr/planning/ground/: __init__.py
python/src/pytyr/planning/ground/astar_eager/: __init__.py
python/src/pytyr/planning/lifted/: __init__.py
python/src/pytyr/planning/lifted/astar_eager/: __init__.py
src/: CMakeLists.txt
src/analysis/: domains.cpp  listeners.cpp  program_domains.cpp  stratification.cpp  task_domains.cpp
src/datalog/: applicability.cpp  assignment_sets.cpp  bottom_up.cpp  consistency_graph.cpp  delta_evaluator.cpp  delta_kpkc.cpp  delta_kpkc2.cpp  delta_kpkc_graph.cpp  delta_kpkc_new.cpp  execution_contexts.cpp  fact_set.cpp  formatter.cpp  generator.cpp  rule_scheduler.cpp
src/datalog/policies/: annotation.cpp  care.cpp  termination.cpp
src/datalog/transformations/: component_decomposition.cpp  eliminate_dangling_existentials.cpp
src/datalog/workspaces/: d2p.cpp  facts.cpp  p2d.cpp  program.cpp  rule.cpp  rule_delta.cpp  worker.cpp
src/formalism/datalog/: builder.cpp  formatter.cpp  grounder.cpp  repository.cpp  variable_dependency_graph.cpp  views.cpp
src/formalism/planning/: builder.cpp  fdr_context.cpp  formatter.cpp  grounder.cpp  loki_to_tyr.cpp  loki_to_tyr.hpp  parser.cpp  planning_task.cpp  repository.cpp  variable_dependency_graph.cpp  views.cpp
src/formalism/planning/invariants/: constraints.cpp  constraints.hpp  formatter.cpp  matching.cpp  matching.hpp  mutexes.cpp  proof.cpp  refinement.cpp  synthesis.cpp  utils.hpp
src/graphs/: bron_kerbosch.cpp
src/grounder/: assignment_set.cpp  consistency_graph.cpp  execution_contexts.cpp  fact_set.cpp  formatter.cpp  generator.cpp  kpkc_utils.cpp  rule_scheduler.cpp  workspace.cpp
src/planning/: action_executor.cpp  applicability.cpp  applicability_lifted.cpp  domain.cpp  formatter.cpp  ground_task.cpp  lifted_task.cpp  loki_to_tyr.cpp  loki_to_tyr.hpp  metric.cpp  metric.hpp  node.cpp  packed_state.cpp  parser.cpp  state.cpp  successor_generator.cpp  task.cpp  task_utils.cpp  task_utils.hpp  transition.cpp  unpacked_state.cpp
src/planning/abstractions/: explicit_projection.cpp  goal_pattern_generator.cpp
src/planning/algorithms/: astar_eager.cpp  gbfs_lazy.cpp
src/planning/algorithms/astar_eager/: event_handler.cpp
src/planning/algorithms/gbfs_lazy/: event_handler.cpp
src/planning/ground_task/: axiom_evaluator.cpp  axiom_listeners.cpp  axiom_scheduler.cpp  axiom_stratification.cpp  match_tree.cpp  node.cpp  state.cpp  state_repository.cpp  successor_generator.cpp
src/planning/ground_task/state_storage/: atom_tree_compression.cpp  fact_tree_compression.cpp
src/planning/ground_task/state_storage/hash_set/: atom.cpp  context.cpp  fact.cpp
src/planning/heuristics/: canonical.cpp  goal_count.cpp  max.cpp  projection_abstraction.cpp
src/planning/lifted_task/: axiom_evaluator.cpp  node.cpp  state.cpp  state_repository.cpp  successor_generator.cpp  task_grounder.cpp  transition.cpp  transition.hpp
src/planning/lifted_task/abstractions/: pattern_generator.cpp  projection_generator.cpp
src/planning/lifted_task/abstractions/projection_generator/: task_projection.cpp  task_projection.hpp
src/planning/lifted_task/heuristics/: add.cpp  ff.cpp  max.cpp  rpg_add.cpp  rpg_ff.cpp  rpg_max.cpp
src/planning/lifted_task/state_storage/: atom_tree_compression.cpp  fact_tree_compression.cpp
src/planning/lifted_task/state_storage/hash_set/: atom.cpp  fact.cpp
src/planning/programs/: action.cpp  axiom.cpp  common.cpp  common.hpp  ground.cpp  rpg.cpp
src/planning/state_storage/hash_set/: numeric.cpp
src/planning/state_storage/tree_compression/: numeric.cpp
src/solver/: bottom_up.cpp
tests/unit/: CMakeLists.txt  utils.hpp
tests/unit/analysis/: domains.cpp  listeners.cpp  stratification.cpp  variable_domains.cpp
tests/unit/buffer/: indexed_hash_set.cpp
tests/unit/cista/: indexed_hash_set.cpp
tests/unit/common/: bit_packed_layout.cpp  dynamic_bitset.cpp  vector.cpp
tests/unit/database/: join.cpp
tests/unit/datalog/: assignment_sets.cpp  delta_kpkc.cpp  delta_kpkc_new.cpp  generator.cpp
tests/unit/formalism/: builder.cpp  proxy.cpp  repository.cpp  unification.cpp  view.cpp
tests/unit/formalism/planning/invariants/: synthesis.cpp
tests/unit/formalism2/: proxy.cpp  repository.cpp
tests/unit/grounder/: assignment_sets.cpp  generator.cpp  static_consistency_graph.cpp
tests/unit/planning/: ground_task.cpp  ground_vs_lifted.cpp  lifted_task.cpp
tests/unit/planning/heuristics/: projection_abstraction.cpp  projection_abstraction.json  projection_abstraction_estimates.json
(+731 files in other folders)
